--- a/jblog-service/pom.xml
+++ b/jblog-service/pom.xml
@@ -7,16 +7,25 @@
   <parent>
     <groupId>com.github.aint</groupId>
     <artifactId>jblog</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+    <version>0.11</version>
   </parent>
 
   <groupId>com.github.aint.jblog</groupId>
   <artifactId>jblog-service</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
 
   <dependencies>
     <dependency>
       <groupId>com.github.aint.jblog</groupId>
       <artifactId>jblog-model</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.hibernate</groupId>
+      <artifactId>hibernate-validator</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.mail</groupId>
