Fixed #7. Renamed the publicRoom.jsp page to anonymousRoom.jsp

--- a/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/mapping.properties
+++ b/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/mapping.properties
@@ -9,12 +9,12 @@ mapping.jsp.aboutUs  = about-us
 mapping.servlet.activateAccount = activate-account
 mapping.servlet.addArticle      = add-article
 mapping.servlet.addNews         = add-news
+mapping.servlet.anonymousRoom   = anonymous-room
 mapping.servlet.changeLocale    = change-locale
 mapping.servlet.editArticle     = edit-article
 mapping.servlet.index           = index
 mapping.servlet.login           = login
 mapping.servlet.logout          = logout
-mapping.servlet.publicRoom      = public-room
 mapping.servlet.registration    = registration
 mapping.servlet.kaptcha         = kaptcha.png
 mapping.servlet.displayArticle  = display-article
