--- a/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/path.properties
+++ b/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/path.properties
@@ -3,12 +3,12 @@ path.jsp.activateAccount        = /WEB-INF/jsp/activateAccount.jsp
 path.jsp.aboutUs                = /WEB-INF/jsp/aboutUs.jsp
 path.jsp.addArticle             = /WEB-INF/jsp/addArticle.jsp
 path.jsp.addNews                = /WEB-INF/jsp/addNews.jsp
+path.jsp.anonymousRoom          = /WEB-INF/jsp/anonymousRoom.jsp
 path.jsp.editArticle            = /WEB-INF/jsp/editArticle.jsp
 path.jsp.feedback               = /WEB-INF/jsp/feedback.jsp
 path.jsp.index                  = /WEB-INF/jsp/index.jsp
 path.jsp.login                  = /WEB-INF/jsp/login.jsp
 path.jsp.msie                   = /WEB-INF/jsp/msie.jsp
-path.jsp.publicRoom             = /WEB-INF/jsp/publicRoom.jsp
 path.jsp.registration           = /WEB-INF/jsp/registration.jsp
 path.jsp.displayArticle         = /WEB-INF/jsp/displayArticle.jsp
 path.jsp.articles               = /WEB-INF/jsp/articles.jsp
