--- a/jblog-view/jblog-web-view/src/main/webapp/WEB-INF/web.xml
+++ b/jblog-view/jblog-web-view/src/main/webapp/WEB-INF/web.xml
@@ -230,12 +230,12 @@
   </servlet-mapping>
 
   <servlet>
-    <servlet-name>PublicRoom</servlet-name>
-    <servlet-class>com.github.aint.jblog.web.controller.PublicRoom</servlet-class>
+    <servlet-name>AnonymousRoom</servlet-name>
+    <servlet-class>com.github.aint.jblog.web.controller.AnonymousRoom</servlet-class>
   </servlet>
   <servlet-mapping>
-    <servlet-name>PublicRoom</servlet-name>
-    <url-pattern>/public-room</url-pattern>
+    <servlet-name>AnonymousRoom</servlet-name>
+    <url-pattern>/anonymous-room</url-pattern>
   </servlet-mapping>
 
   <servlet>
