Added 'AddHub' controller and its view.

--- a/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/mapping.properties
+++ b/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/mapping.properties
@@ -8,6 +8,7 @@ mapping.jsp.aboutUs  = about-us
 # servlet-mapping
 mapping.servlet.activateAccount = activate-account
 mapping.servlet.addArticle      = add-article
+mapping.servlet.addHub          = add-hub
 mapping.servlet.addNews         = add-news
 mapping.servlet.anonymousRoom   = anonymous-room
 mapping.servlet.changeLocale    = change-locale
