--- a/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/path.properties
+++ b/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/path.properties
@@ -2,6 +2,7 @@
 path.jsp.activateAccount        = /WEB-INF/jsp/activateAccount.jsp
 path.jsp.aboutUs                = /WEB-INF/jsp/aboutUs.jsp
 path.jsp.addArticle             = /WEB-INF/jsp/addArticle.jsp
+path.jsp.addHub                = /WEB-INF/jsp/addHub.jsp
 path.jsp.addNews                = /WEB-INF/jsp/addNews.jsp
 path.jsp.anonymousRoom          = /WEB-INF/jsp/anonymousRoom.jsp
 path.jsp.editArticle            = /WEB-INF/jsp/editArticle.jsp
