Added the hubs.jsp page.

--- a/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/mapping.properties
+++ b/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/mapping.properties
@@ -11,14 +11,15 @@ mapping.servlet.addArticle      = add-article
 mapping.servlet.addHub          = add-hub
 mapping.servlet.addNews         = add-news
 mapping.servlet.anonymousRoom   = anonymous-room
+mapping.servlet.articles        = articles
 mapping.servlet.changeLocale    = change-locale
+mapping.servlet.displayArticle  = display-article
 mapping.servlet.editArticle     = edit-article
 mapping.servlet.index           = index
+mapping.servlet.hubs            = hubs
+mapping.servlet.kaptcha         = kaptcha.png
 mapping.servlet.login           = login
 mapping.servlet.logout          = logout
 mapping.servlet.registration    = registration
-mapping.servlet.kaptcha         = kaptcha.png
-mapping.servlet.displayArticle  = display-article
-mapping.servlet.articles        = articles
 mapping.servlet.users           = users
 mapping.servlet.vote            = vote
