Added the viewHub.jsp page and its mapping.

--- a/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/mapping.properties
+++ b/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/mapping.properties
@@ -22,4 +22,5 @@ mapping.servlet.login           = login
 mapping.servlet.logout          = logout
 mapping.servlet.registration    = registration
 mapping.servlet.users           = users
+mapping.servlet.viewHub         = hub
 mapping.servlet.vote            = vote
