--- a/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/path.properties
+++ b/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/path.properties
@@ -16,6 +16,7 @@ path.jsp.msie                   = /WEB-INF/jsp/msie.jsp
 path.jsp.registration           = /WEB-INF/jsp/registration.jsp
 path.jsp.successfulRegistration = /WEB-INF/jsp/successfulRegistration.jsp
 path.jsp.users                  = /WEB-INF/jsp/users.jsp
+path.jsp.viewHub                = /WEB-INF/jsp/viewHub.jsp
 
 path.jsp.footer  = /WEB-INF/jsp/include/footer.jsp
 path.jsp.header  = /WEB-INF/jsp/include/header.jsp
