Added the userProfile.jsp page and its mapping.

--- a/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/mapping.properties
+++ b/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/mapping.properties
@@ -21,6 +21,7 @@ mapping.servlet.kaptcha         = kaptcha.png
 mapping.servlet.login           = login
 mapping.servlet.logout          = logout
 mapping.servlet.registration    = registration
+mapping.servlet.userProfile     = user
 mapping.servlet.users           = users
 mapping.servlet.viewHub         = hub
 mapping.servlet.vote            = vote
