--- a/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/path.properties
+++ b/jblog-view/jblog-web-controller/src/main/resources/com/github/aint/jblog/web/constant/path.properties
@@ -15,6 +15,7 @@ path.jsp.login                  = /WEB-INF/jsp/login.jsp
 path.jsp.msie                   = /WEB-INF/jsp/msie.jsp
 path.jsp.registration           = /WEB-INF/jsp/registration.jsp
 path.jsp.successfulRegistration = /WEB-INF/jsp/successfulRegistration.jsp
+path.jsp.userProfile            = /WEB-INF/jsp/userProfile.jsp
 path.jsp.users                  = /WEB-INF/jsp/users.jsp
 path.jsp.viewHub                = /WEB-INF/jsp/viewHub.jsp
 
